# euclidean

./: Cargo.toml
benches/: iter.rs
src/: coordinates.rs  dimensions.rs  lib.rs  point.rs  region.rs  size.rs
tests/: lib.rs
